# virtuelium

./: .gitignore  CMakeLists.txt  DynamicCamera.py  House.py  LICENSE  README.md  install.txt
Doc/: CMakeLists.txt  copyright.txt  done.txt  install.txt  readme.txt
Doc/doxygen/: CMakeLists.txt  Doxyfile.in  Doxygen.cmake  mainpage.dox.cmake
Doc/doxygen/dox/: mainpage.dox
Doc/manuel/: Formules.odt  Manuel.odt  Specifications_mhdri.odt  specifications_donnees_spectrales.odt  specifications_obj.odt  specifications_scene_xml.odt
Doc/sphinx/: CMakeLists.txt
Doc/sphinx/cmake/: Makefile.sphinx.cmake  conf.py.cmake  doxygen.breathe.rst  make.bat.sphinx.cmake
Doc/sphinx/source/: bibliography.rst  codingstyle.rst  conf.py  credit.rst  demo.rst  download.rst  doxygen.rst  files.rst  index.rst  install.rst  intro.rst  test.rst  using.rst
Doc/todo/: todo.odt
sources/: CMakeLists.txt  SourceInclusion.cmake
sources/include/camerashapes/: CameraShape.hpp  FishEyeCameraShape.hpp  OrthoscopicCameraShape.hpp  PerspectiveCameraShape.hpp  PolarCameraShape.hpp
sources/include/colorhandlers/: CIEBase.hpp  CIEColorHandler.hpp  ColorHandler.hpp  LinearPolarizerColorHandler.hpp  PolarisationColorHandler.hpp  RGBColorHandler.hpp  SimpleRGBColorHandler.hpp  Spectrophotometer.hpp  SpectrumColorHandler.hpp
sources/include/core/: 3DBase.hpp  Camera.hpp  LightBase.hpp  Object.hpp  Scenery.hpp  Source.hpp  Virtuelium.hpp  VrtLog.hpp  debug.hpp
sources/include/core/taskexecutor/: ClientServerExecutor.hpp  StandAloneExecutor.hpp  TaskExecutorBase.hpp
sources/include/core/taskmanager/: TaskManagerBase.hpp  TaskManagerLine.hpp  TaskManagerSpiral.hpp
sources/include/environments/: Environment.hpp  SpectralEnvironment.hpp  SphericalEnvironment.hpp  SphericalEnvironment2.hpp
sources/include/exceptions/: Exception.hpp
sources/include/io/: DataParser.hpp  GlobalSceneryParser.hpp  MathParser.hpp  MediumParser.hpp  Parser.hpp  RendererDataParser.hpp  XMLParser.hpp  XMLTree.hpp
sources/include/io/image/: ImageParser.hpp  MHDRImageParser.hpp  RGBImageParser.hpp
sources/include/io/mesh/: MeshParser.hpp
sources/include/io/sceneryV2/: V2CameraShapeParser.hpp  V2ColorHandlerParser.hpp  V2EnvironmentParser.hpp  V2LightSourceParser.hpp  V2MaterialParser.hpp  V2ObjectShapeParser.hpp  V2RendererParser.hpp  V2SceneryParser.hpp
sources/include/lightsources/: DirectionalLightSource.hpp  LightSource.hpp  PlaneLightSource.hpp  PointLightSource.hpp  SurfaceLightSource.hpp
sources/include/materials/: AlloyBRDF.hpp  BeckmannBRDF.hpp  BeckmannRefractiveBRDF.hpp  BlendedBRDF.hpp  ConcentrationMap.hpp  DepolarizedBRDF.hpp  InstanceBRDF.hpp  LambertianBRDF.hpp  MappedBRDF.hpp  Material.hpp  MetalB.hpp  MetalW.hpp  NullBRDF.hpp  RefractiveBRDF.hpp  RegularBRDF.hpp  RoughLambertianBRDF.hpp  RoughVarnishedLambertianBRDF.hpp  SampledMaterial.hpp  TextureBRDF.hpp  TwoSidedBRDF.hpp  VarnishedLambertianBRDF.hpp
sources/include/maths/: Basis.hpp  BoundingBox.hpp  Complex.hpp  LongComplex.hpp  Point.hpp  Point2D.hpp  Ray.hpp  Vector.hpp
sources/include/objectshapes/: InstanceObjectShape.hpp  Mesh.hpp  NormalMap.hpp  NullGeometry.hpp  ObjectShape.hpp  Plane.hpp  Rotation.hpp  Scale.hpp  Sphere.hpp  Transformation.hpp  Translation.hpp  Triangle.hpp
sources/include/physics/: BeckmannRoughnessFormula.hpp  DielectricFormula.hpp  KubelkaMunkFormula.hpp  LayeredSystemComputer.hpp  OrenNayarFormula.hpp  ThinLayerFormula.hpp  ThinLayerSystem.hpp  WardRoughnessFormula.hpp
sources/include/raytracers/: MPIClients.hpp  MPIServer.hpp  OldTaskManager.hpp  Session.hpp
sources/include/renderers/: PhotonMappingRenderer.hpp  Renderer.hpp  SimpleRenderer.hpp  TestRenderer.hpp
sources/include/structures/: HashFunctors.hpp  HashMap.hpp  Image.hpp  KdTree.hpp  LightData.hpp  LightVector.hpp  Medium.hpp  MultispectralPhoton.hpp  MultispectralPhotonMap.hpp  Octree.hpp  Spectrum.hpp  Texture.hpp
sources/src/: main.cpp
sources/src/camerashapes/: FishEyeCameraShape.cpp  OrthoscopicCameraShape.cpp  PerspectiveCameraShape.cpp  PolarCameraShape.cpp
sources/src/colorhandlers/: CIEColorHandler.cpp  LinearPolarizerColorHandler.cpp  PolarisationColorHandler.cpp  RGBColorHandler.cpp  SimpleRGBColorHandler.cpp  Spectrophotometer.cpp  SpectrumColorHandler.cpp
sources/src/core/: Camera.cpp  LightBase.cpp  Object.cpp  Scenery.cpp  Source.cpp  Virtuelium.cpp  VrtLog.cpp
sources/src/core/taskexecutor/: ClientServerExecutor.cpp  StandAloneExecutor.cpp  TaskExecutorBase.cpp
sources/src/core/taskmanager/: TaskManagerBase.cpp  TaskManagerLine.cpp  TaskManagerSpiral.cpp
sources/src/environments/: Environment.cpp  SpectralEnvironment.cpp  SphericalEnvironment.cpp  SphericalEnvironment2.cpp
sources/src/io/: DataParser.cpp  GlobalSceneryParser.cpp  MathParser.cpp  MediumParser.cpp  XMLParser.cpp  XMLTree.cpp
sources/src/io/image/: ImageParser.cpp  MHDRImageParser.cpp  RGBImageParser.cpp
sources/src/io/mesh/: MeshParser.cpp
sources/src/io/sceneryV2/: V2CameraShapeParser.cpp  V2ColorHandlerParser.cpp  V2EnvironmentParser.cpp  V2LightSourceParser.cpp  V2MaterialParser.cpp  (+3 more)
sources/src/lightsources/: DirectionalLightSource.cpp  PlaneLightSource.cpp  PointLightSource.cpp  SurfaceLightSource.cpp
sources/src/materials/: AlloyBRDF.cpp  BeckmannBRDF.cpp  BeckmannRefractiveBRDF.cpp  BlendedBRDF.cpp  ConcentrationMap.cpp  DepolarizedBRDF.cpp  LambertianBRDF.cpp  MappedBRDF.cpp  Material.cpp  MetalB.cpp  MetalW.cpp  NullBRDF.cpp  RefractiveBRDF.cpp  RegularBRDF.cpp  RoughLambertianBRDF.cpp  RoughVarnishedLambertianBRDF.cpp  SampledMaterial.cpp  TextureBRDF.cpp  TwoSidedBRDF.cpp  VarnishedLambertianBRDF.cpp
sources/src/objectshapes/: Mesh.cpp  NormalMap.cpp  NullGeometry.cpp  Plane.cpp  Rotation.cpp  Scale.cpp  Sphere.cpp  Transformation.cpp  Translation.cpp  Triangle.cpp
sources/src/physics/: LayeredSystemComputer.cpp
sources/src/raytracers/: MPIClients.cpp  MPIServer.cpp  OldTaskManager.cpp
sources/src/renderers/: PhotonMappingRenderer.cpp  SimpleRenderer.cpp  TestRenderer.cpp
sources/src/structures/: Image.cpp  Texture.cpp
(+284 files in other folders)
